--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:hintText="Multi Selection" />
 
     <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
